--- a/libtasn1-4.12-src/windows/gnulib/gnulib.vcxproj.filters
+++ b/libtasn1-4.12-src/windows/gnulib/gnulib.vcxproj.filters
@@ -57,5 +57,17 @@
     <ClCompile Include="..\..\gl\getopt.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\gl\ftello.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\gl\gettime.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\gl\gettimeofday.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\gl\ftell.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
